--- a/localisation/english/replace/aurora_state_names_l_english.yml
+++ b/localisation/english/replace/aurora_state_names_l_english.yml
@@ -159,3 +159,6 @@
  STATE_972:0 "Kars"
  STATE_973:0 "Severshchyna"
  STATE_974:0 "Pinsk"
+ STATE_975:0 "Kuzbas"
+ STATE_976:0 "Tayshet"
+ STATE_977:0 "Minusinsk"
