--- a/localisation/english/replace/new_countries_l_english.yml
+++ b/localisation/english/replace/new_countries_l_english.yml
@@ -481,12 +481,15 @@
  TOM:0 "Autonomous Siberian Republic"
  TOM_ADJ:0 "Tomsk"
  TOM_DEF:0 "the Government of Autonomous Siberia"
- KRA:0 "Krasnoyarsk Federation"
- KRA_ADJ:0 "Krasnoyarsk"
- KRA_DEF:0 "the Krasnoyarsk Federation"
- TAS:0 "Bratsk Peasant Republic"
- TAS_ADJ:0 "Bratsk"
- TAS_DEF:0 "the Bratsk Peasant Republic"
+ MIN:0 "Minusinsk Federation"
+ MIN_ADJ:0 "Minusinsk"
+ MIN_DEF:0 "the Minusinsk Federation"
+ TAS:0 "Tayshet Peasant Republic"
+ TAS_ADJ:0 "Tayshet"
+ TAS_DEF:0 "the Tayshet Peasant Republic"
+ BRT:0 "Bratsk Soviet"
+ BRT_ADJ:0 "Bratsk"
+ BRT_DEF:0 "the Bratsk Soviet"
  #SIB:0 "Siberian Peasant Republic"
  #SIB_ADJ:0 "Siberian Peasant"
  #SIB_DEF:0 "the Peasant Republics"
